// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Manager who has reportees & metrics 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-438 MuiPaper-elevation4-444 MuiPaper-rounded-439 MUIDataTable-paper-433 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-475 MuiToolbar-regular-477 MuiToolbar-gutters-476 MUIDataTableToolbar-root-465"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-466"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-468"
        >
          <h6
            className="MuiTypography-root-479 MuiTypography-h6-496 MUIDataTableToolbar-titleText-469"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-467"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-529 MuiIconButton-root-523 MUIDataTableToolbar-icon-470"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-528"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-532"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-640"
          />
        </button>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-541"
    />
    <div
      className="MUIDataTable-responsiveScroll-435"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-543 MUIDataTable-tableRoot-434"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-436"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-546 MUIDataTableHead-main-544"
        >
          <tr
            className="MuiTableRow-root-548 MuiTableRow-head-551 MUIDataTableHeadRow-root-547"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-head-571 MUIDataTableHeadCell-root-562 MUIDataTableHeadCell-fixedHeader-563"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-569"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-566"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-567"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-582"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-589"
        >
          <tr
            className="MuiTableRow-root-548 MuiTableRow-hover-550 MUIDataTableBodyRow-root-590 MUIDataTableBodyRow-hover-591"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              <a
                className=""
                href="https://mozilla.org/1"
                rel="noopener noreferrer"
                target="_blank"
              >
                1
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594 MUIDataTableBodyCell-cellHide-595"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-570 MuiTableCell-body-572 MUIDataTableBodyCell-root-594"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-543"
    >
      <tfoot
        className="MuiTableFooter-root-601"
      >
        <tr
          className="MuiTableRow-root-548 MuiTableRow-footer-552"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-570 MuiTableCell-footer-573 MUIDataTablePagination-root-598"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-475 MuiToolbar-regular-477 MuiToolbar-gutters-476 MuiTablePagination-toolbar-603 MUIDataTablePagination-toolbar-599"
            >
              <div
                className="MuiTablePagination-spacer-604"
              />
              <span
                className="MuiTypography-root-479 MuiTypography-caption-489 MuiTypography-colorInherit-508 MuiTablePagination-caption-605"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-619 MuiTablePagination-input-609"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-612 MuiTablePagination-selectRoot-606 MUIDataTablePagination-selectRoot-600"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-613 MuiTablePagination-select-607 MuiSelect-selectMenu-616 MuiInputBase-input-629"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-532 MuiSelect-icon-618 MuiTablePagination-selectIcon-608"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-479 MuiTypography-caption-489 MuiTypography-colorInherit-508 MuiTablePagination-caption-605"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-611"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiIconButton-root-523 MuiIconButton-colorInherit-524 MuiIconButton-disabled-527"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-528"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-532"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiIconButton-root-523 MuiIconButton-colorInherit-524 MuiIconButton-disabled-527"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-528"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-532"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-437"
    />
  </div>
</div>
`;

exports[`renders Manager who has reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-223 MuiPaper-elevation4-229 MuiPaper-rounded-224 MUIDataTable-paper-218 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-260 MuiToolbar-regular-262 MuiToolbar-gutters-261 MUIDataTableToolbar-root-250"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-251"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-253"
        >
          <h6
            className="MuiTypography-root-264 MuiTypography-h6-281 MUIDataTableToolbar-titleText-254"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-252"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-314 MuiIconButton-root-308 MUIDataTableToolbar-icon-255"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-313"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-317"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-425"
          />
        </button>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-326"
    />
    <div
      className="MUIDataTable-responsiveScroll-220"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-328 MUIDataTable-tableRoot-219"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-221"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-331 MUIDataTableHead-main-329"
        >
          <tr
            className="MuiTableRow-root-333 MuiTableRow-head-336 MUIDataTableHeadRow-root-332"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-head-356 MUIDataTableHeadCell-root-347 MUIDataTableHeadCell-fixedHeader-348"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-354"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-351"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-352"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-367"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-374"
        >
          <tr
            className="MuiTableRow-root-333 MuiTableRow-hover-335 MUIDataTableBodyRow-root-375 MUIDataTableBodyRow-hover-376"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379 MUIDataTableBodyCell-cellHide-380"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-355 MuiTableCell-body-357 MUIDataTableBodyCell-root-379"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-328"
    >
      <tfoot
        className="MuiTableFooter-root-386"
      >
        <tr
          className="MuiTableRow-root-333 MuiTableRow-footer-337"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-355 MuiTableCell-footer-358 MUIDataTablePagination-root-383"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-260 MuiToolbar-regular-262 MuiToolbar-gutters-261 MuiTablePagination-toolbar-388 MUIDataTablePagination-toolbar-384"
            >
              <div
                className="MuiTablePagination-spacer-389"
              />
              <span
                className="MuiTypography-root-264 MuiTypography-caption-274 MuiTypography-colorInherit-293 MuiTablePagination-caption-390"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-404 MuiTablePagination-input-394"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-397 MuiTablePagination-selectRoot-391 MUIDataTablePagination-selectRoot-385"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-398 MuiTablePagination-select-392 MuiSelect-selectMenu-401 MuiInputBase-input-414"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-317 MuiSelect-icon-403 MuiTablePagination-selectIcon-393"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-264 MuiTypography-caption-274 MuiTypography-colorInherit-293 MuiTablePagination-caption-390"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-396"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-314 MuiButtonBase-disabled-315 MuiIconButton-root-308 MuiIconButton-colorInherit-309 MuiIconButton-disabled-312"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-313"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-317"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-314 MuiButtonBase-disabled-315 MuiIconButton-root-308 MuiIconButton-colorInherit-309 MuiIconButton-disabled-312"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-313"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-317"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-222"
    />
  </div>
</div>
`;

exports[`renders Someone with no reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation4-14 MuiPaper-rounded-9 MUIDataTable-paper-3 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46 MUIDataTableToolbar-root-35"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-36"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-38"
        >
          <h6
            className="MuiTypography-root-49 MuiTypography-h6-66 MUIDataTableToolbar-titleText-39"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-37"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-99 MuiIconButton-root-93 MUIDataTableToolbar-icon-40"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-98"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-102"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-210"
          />
        </button>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-111"
    />
    <div
      className="MUIDataTable-responsiveScroll-5"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-113 MUIDataTable-tableRoot-4"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-6"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-116 MUIDataTableHead-main-114"
        >
          <tr
            className="MuiTableRow-root-118 MuiTableRow-head-121 MUIDataTableHeadRow-root-117"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-head-141 MUIDataTableHeadCell-root-132 MUIDataTableHeadCell-fixedHeader-133"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-139"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-136"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-137"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-152"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-159"
        >
          <tr
            className="MuiTableRow-root-118 MuiTableRow-hover-120 MUIDataTableBodyRow-root-160 MUIDataTableBodyRow-hover-161"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              Manager
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164 MUIDataTableBodyCell-cellHide-165"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-140 MuiTableCell-body-142 MUIDataTableBodyCell-root-164"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-113"
    >
      <tfoot
        className="MuiTableFooter-root-171"
      >
        <tr
          className="MuiTableRow-root-118 MuiTableRow-footer-122"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-140 MuiTableCell-footer-143 MUIDataTablePagination-root-168"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46 MuiTablePagination-toolbar-173 MUIDataTablePagination-toolbar-169"
            >
              <div
                className="MuiTablePagination-spacer-174"
              />
              <span
                className="MuiTypography-root-49 MuiTypography-caption-59 MuiTypography-colorInherit-78 MuiTablePagination-caption-175"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-189 MuiTablePagination-input-179"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-182 MuiTablePagination-selectRoot-176 MUIDataTablePagination-selectRoot-170"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-183 MuiTablePagination-select-177 MuiSelect-selectMenu-186 MuiInputBase-input-199"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-102 MuiSelect-icon-188 MuiTablePagination-selectIcon-178"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-49 MuiTypography-caption-59 MuiTypography-colorInherit-78 MuiTablePagination-caption-175"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-181"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-99 MuiButtonBase-disabled-100 MuiIconButton-root-93 MuiIconButton-colorInherit-94 MuiIconButton-disabled-97"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-98"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-102"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-99 MuiButtonBase-disabled-100 MuiIconButton-root-93 MuiIconButton-colorInherit-94 MuiIconButton-disabled-97"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-98"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-102"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-7"
    />
  </div>
</div>
`;
